--- a/servers.ini
+++ b/servers.ini
@@ -1,2 +1,8 @@
 [stats_server]
-18.184.245.124 ansible_user=ec2-user
+__your_server_ip ansible_user=ec2-user
+
+[web_nodes]
+__your_server_ip ansible_user=ec2-user
+
+[db_nodes]
+__your_server_ip ansible_user=ec2-user
