--- a/templates/telegraf_apache.conf
+++ b/templates/telegraf_apache.conf
@@ -14,3 +14,14 @@
   percpu = true
   totalcpu = false
   fielddrop = ["time_*"]
+
+[[inputs.diskio]]
+
+[[inputs.system]]
+
+[[inputs.net]]
+
+[[inputs.apache]]
+  urls = ["http://localhost:8888/server-status?auto"]
+
+
